projeto-blog/Projeto-blog/back-end/liblog/src/main/java/com/example/liblog/error/exception/AuthenticateException.java
package com.example.liblog.error.exception;

import lombok.Data;


public class AuthenticateException extends RuntimeException{
    public AuthenticateException(String message) {
        super(message);
    }
}
